--- a/src/scss/_local-plans.scss
+++ b/src/scss/_local-plans.scss
@@ -206,13 +206,18 @@
   }
 }
 
+$editable-box-border-width: 1px;
+
 .editable-plan-title {
   box-sizing: content-box;
+  padding-bottom: $editable-box-border-width;
 
   &:hover {
-    margin-top: -1px;
-    margin-left: -1px;
-    border: 1px dashed govuk-colour("blue");
+    margin-top: -$editable-box-border-width;
+    margin-left: -10px;
+    padding-left: 10px - $editable-box-border-width;
+    padding-bottom: 0;
+    border: $editable-box-border-width dashed govuk-colour("blue");
     background: govuk-colour("grey-4");
     cursor: pointer;
   }
